--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -1,4 +1,3 @@
-
 .Hero-Section {
   width: 100%;
   height: 100%; 
@@ -11,7 +10,7 @@
   width: 100%;
   height: 80%;
   background-repeat: no-repeat;
-  background-size: 100% 100%; /* or cover */
+  background-size: 100% 100%;
   background-position: top right;
   z-index: 1;
 }
@@ -21,6 +20,8 @@
   padding:20px 100px 0px 100px;
   
 }
+
+/* ----navbar starts ----- */
 .navbar{
   /* border: 1px solid red; */
   text-align: center;
@@ -30,36 +31,54 @@
 .navbar > ul{
   display: flex;
   flex-direction: row;
-  /* justify-content: space-between; */
   gap: 55px;
-  text-decoration: none;
   list-style: none;
   justify-content: flex-end;
   padding-right: 5px;
   margin: 0;
-  /* padding: 0; */
+  align-items: center;
 }
 .logo{
   /* border: 1px solid yellow; */
-  margin-right: 240px;
+  margin-right: 190px;
   vertical-align: top;
 }
-nav-item{
-  font-size: 17px;
+.nav-item{
+  font-size: 16px;
   font-family: sans-serif;
-  vertical-align: bottom;
+  display: flex;
+  align-items: center;
 }
-.heroImage> img{
-    width: 765px;
-    height: 765px;
+#signUp-btn{
+  background-color: transparent;
+  border: 1px solid #5E6282;
+  min-width: 80px;  
+  min-height: 30px;
+  font-size: 13px;
+  border-radius: 5px;
+  white-space: nowrap;
+  vertical-align: top;
+  display: flex; 
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
 }
+#drop-down{
+  background: transparent;
+  border: none;
+}
+/* ------ navabr ends ------ */
+ 
 
+/* -----Hero Area Starts------- */
 .Hero-Content{
   /* border: 1px solid greenyellow; */
-  margin-top: 10px;
+  margin-top: 5px;
   display: flex;
   flex-direction: row;
 }
+
+/* ----Left Column Starts */
 .hero-Description{
   margin-top: 80px;
 }
@@ -123,7 +142,7 @@ nav-item{
   height: 32px;
   border-radius: 100%;
   border: none;
-  /* box-shadow: 0 6px 8px #ff876f; */
+  box-shadow: 0 6px 8px #ff876f;
 }
 .icon{
   vertical-align:middle ;
@@ -135,11 +154,55 @@ nav-item{
   font-size: 13px;
   color: #5E6282;
 }
+ /* ----Left Column Ends--- */
+
+
+ /* ----Right Column Starts--- */
+
 .heroImage{
   /* border: 1px solid rgb(17, 191, 191); */
+}
+.heroImage> img{
+    width: 765px;
+    height: 765px;
 }
 #traveler1IMG{
   /* border: 1px solid yellow; */
   width: 460px;
   height: 550px;
+  position: relative;
 }
+#planeIMG1{
+  display: flex;
+  justify-content: flex-start;
+  /* border: 1px solid red; */
+  position: absolute;
+  z-index: 1;
+
+  top: 130px;
+  left: 670px;
+  width: 110px;
+  height: auto;
+  background-repeat: no-repeat;
+  /* background-size: 100% 100%; */
+  /* background-position: top right; */
+}
+#planeIMG2{
+  display: flex;
+  justify-content: flex-start;
+  /* border: 1px solid red; */
+  position: absolute;
+  z-index: 0;
+
+  top: 150px;
+  right: 100px;
+  width: 110px;
+  height: auto;
+  background-repeat: no-repeat;
+  /* background-size: 100% 100%; */
+  /* background-position: top right; */
+}
+
+/* ----Right Column Ends--- */
+
+/* -----Hero Area Ends------- */
